--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,27 +23,13 @@
         {% endif %}
       <h1 class="post-title entry-title">{{ page.title }}</h1>
       {{ content }}
-      <footer class="entry-meta">
-        <span class="entry-tags">{% for tag in page.tags %}<a href="{{ site.url }}/tags#{{ tag }}" title="Pages tagged {{ tag }}" class="tag"><span class="term">{{ tag }}</span></a>{% unless forloop.last %}{% endunless %}{% endfor %}</span>
-        {% if page.modified %}<span>Updated on <span class="entry-date date updated"><time datetime="{{ page.modified }}">{{ page.modified | date: "%B %d, %Y" }}</time></span></span>
-        {% endif %}
-        <span class="author vcard"><span class="fn">{{ site.owner.name }}</span></span>
-        {% if page.share != false %}{% include social-share.html %}{% endif %}
-      </footer>
     </div><!-- /.entry-content -->
-    {% include author.html %}
     {% if page.comments != false and site.disqus_shortname %}<section id="disqus_thread"></section><!-- /#disqus_thread -->{% endif %}
-    {% if site.related_posts.size > 0 %}{% include read-more.html %}{% endif %}
   </article>
 </div><!-- /#main -->
 
 {% include scripts.html %}
-
-<div class="footer-wrapper">
-  <footer role="contentinfo">
-    {% include footer.html %}
-  </footer>
-</div><!-- /.footer-wrapper -->
-
+<script id="dsq-count-scr" src="//kimyounghoons.disqus.com/count.js" async></script>
+   {% if site.related_posts.size > 0 %}{% include read-more.html %}{% endif %}
 </body>
 </html>
